--- a/assets/style/style.sass
+++ b/assets/style/style.sass
@@ -1,2 +1,29 @@
+$lib_yellow: #FBC655
+$lib_red: #63160F
+  
+.badge-primary
+  background-color: $lib_yellow
+  *
+    color: $lib_red
+
+
+
+html
+  *
+    color: white
+
+
+
+body
+  background-image: url("https://images2.alphacoders.com/261/thumb-1920-26102.jpg")
+  background-size: cover
+  background-position-y: 100%
+  height: 100vh
+  form
+    input
+      text-align: center
+      color: $lib_red
+      font-weight: bold
+
 #addBookSection
   display: none
