Add validation for book adding

--- a/assets/style/style.css
+++ b/assets/style/style.css
@@ -10,19 +10,25 @@ html * {
   color: white;
 }
 
-body {
+html body {
   background-image: url("https://images2.alphacoders.com/261/thumb-1920-26102.jpg");
   background-size: cover;
   background-position-y: 100%;
   height: 100vh;
 }
 
-body form input {
+html body form input {
   text-align: center;
   color: #63160F;
   font-weight: bold;
 }
 
+html body table .btn-warning {
+  background-color: #FBC655;
+  color: #63160F;
+}
+
 #addBookSection {
   display: none;
 }
+/*# sourceMappingURL=style.css.map */
